<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.AdditionalWeatherData"
    android:orientation="vertical"
    android:background="@color/black"
    android:tag="additional">

    <ImageView
        android:id="@+id/windImage"
        android:src="@drawable/wind"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="2">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/wiatr"
        android:textColor="@color/white"
        app:autoSizeTextType="uniform">
    </TextView>

    <TextView
    android:id="@+id/forceanddir"
    android:layout_width="match_parent"
        android:layout_height="0dp"
    android:gravity="center_horizontal"
    android:text="@string/loading"
    android:textColor="@color/white"
        android:layout_weight="1"
        android:maxLines="2"
        app:autoSizeTextType="uniform">
</TextView>

    <ImageView
        android:id="@+id/fogImage"
        android:src="@drawable/fog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="2">
    </ImageView>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/powietrze"
        android:layout_weight="1"
        android:textColor="@color/white"
        app:autoSizeTextType="uniform"
        >
    </TextView>

    <TextView
        android:id="@+id/air"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:maxLines="2"
        app:autoSizeTextType="uniform">
    </TextView>







</LinearLayout>