<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.3"
        >

        <TextView

            android:text="@string/input_coords"
            app:autoSizeTextType="uniform"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        >

        <TextView
            android:text="@string/latitude"
            app:autoSizeTextType="uniform"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:gravity="center"
            android:textColor="@color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:background="@color/white"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="stopnie"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LatDegrees"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout

            app:autoSizeTextType="uniform"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="minuty"
            android:textColorHint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LatMinutes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <Spinner
            android:id="@+id/latSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        >

        <TextView
            android:text="@string/longitude"
            app:autoSizeTextType="uniform"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:gravity="center"
            android:textColor="@color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:background="@color/white"
        >

        <com.google.android.material.textfield.TextInputLayout

            app:autoSizeTextType="uniform"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="stopnie"
            android:textColorHint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LonDegrees"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout

            app:autoSizeTextType="uniform"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="minuty"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LonMinutes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <Spinner
            android:id="@+id/lonSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"/>


    </LinearLayout>

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="0.2"
    >

    <TextView
        android:text="@string/interval"
        app:autoSizeTextType="uniform"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        />

</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:background="@color/white"
        >
        <Spinner
            android:id="@+id/freqSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"

            />
    </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:backgroundTint="@color/black"
            android:id="@+id/Submit"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:autoSizeTextType="uniform"
            android:text="Zatwierdź"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>

</LinearLayout>